# KDS

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: AGENTS.md
.github/workflows/: README.md  ci.yml
docs/: AGENTS.md  DECISIONS.md  HOOKS.md  IMPLEMENTATION_PLAN.md  INSTALL.md  PRIVACY.md  README.md  UNINSTALL.md  VALIDATION.md
scripts/: AGENTS.md  README.md  bench.ps1  bootstrap.ps1  install.ps1  install.sh
src/: AGENTS.md  README.md  cli.rs  digest.rs  doctor.rs  evidence.rs  gain.rs  gc.rs  hash.rs  hook.rs  init_codex.rs  logs.rs  main.rs  runner.rs  storage.rs  summarize.rs  update.rs
tests/: AGENTS.md  README.md  wrap.rs
